tests/baselines/reference/templateStringUnterminated2.errors.txt
templateStringUnterminated2.ts(1,4): error TS1160: Unterminated template literal.


==== templateStringUnterminated2.ts (1 errors) ====
    `\`
       
!!! error TS1160: Unterminated template literal.